@@ -1,8 +1,11 @@
-CHANGES - 04/24/2005
+CHANGES - 05/14/2005
 --------------------
 
 CHANGES IN Mini-XML 2.2.1
 
+	- mxmlNewInteger(), mxmlNewOpaque(), mxmlNewReal(),
+	  mxmlNewText(), and mxmlNewTextf() incorrectly required
+	  a parent node (STR #22)
 	- Fixed an XML output bug in mxmldoc.
 	- The "make install" target now uses the install command
 	  to set the proper permissions on UNIX/Linux/OSX.
